--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/trickbooter/codeship-cd.git"
+    "url": "https://github.com/trickbooter/docer-cd.git"
   },
   "author": "trickbooer",
-  "homepage": "https://github.com/trickbooter/codeship-cd",
+  "homepage": "https://github.com/trickbooter/docker-cd",
   "dependencies": {
-    "hapi": ">= 8.8.0"
+    "express": "^4.13.3"
   },
-  "devDependencies": {
-    "tape": ">= 4.0.0"
-  }
+  "devDependencies": {}
 }
