adding mocha tests

--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "dependencies": {
     "express": "^4.13.3"
   },
-  "devDependencies": {}
-}
+  "devDependencies": {
+    "supertest": "^1.1.0"
+  }
